--- a/index.html
+++ b/index.html
@@ -1152,41 +1152,239 @@ Discover the authentic flavors of India with our traditional recipes.
 <div id="chef" class="menu-section">
 <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Especialidades del Chef / Chef's Specials</h3>
 <div class="space-y-6">
+<!-- 67 Chicken Hars Bara -->
 <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">21.</span> Sartaj Special Curry / Curry Especial Sartaj</h4>
-<p class="text-sm text-gray-600">
-Receta secreta del chef con pollo, cordero y gambas en una salsa única
-<br>
-Chef's secret recipe with chicken, lamb and prawns in a unique sauce
-</p>
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">67.</span> Chicken Hars Bara / Pollo Hars Bara</h4>
+    <p class="text-sm text-gray-600">
+      Succulent pieces of chicken marinated in yogurt and cooked in special mint sauce
+      <br>
+      (Jugosos trozos de pollo marinados en yogur y cocinados en salsa especial de menta)
+    </p>
+  </div>
+  <span class="font-bold text-primary">10,90€</span>
 </div>
-<span class="font-bold text-primary">16,95€</span>
-</div>
+
+<!-- 68 Chicken Khumb (Mushroom) Wala -->
 <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">22.</span> Lamb Chops Masala / Chuletas de Cordero Masala</h4>
-<p class="text-sm text-gray-600">
-Chuletas de cordero marinadas y cocinadas en tandoor, servidas con salsa masala
-<br>
-Marinated lamb chops cooked in tandoor, served with masala sauce
-</p>
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">68.</span> Chicken Khumb (Mushroom) Wala / Pollo con Champiñones</h4>
+    <p class="text-sm text-gray-600">
+      Fresh mushrooms and succulent pieces of chicken cooked in special mughlai curry sauce
+      <br>
+      (Champiñones frescos y jugosos trozos de pollo cocinados en salsa especial de curry mughlai)
+    </p>
+  </div>
+  <span class="font-bold text-primary">10,90€</span>
 </div>
-<span class="font-bold text-primary">17,95€</span>
+
+<!-- 69 Butter Chicken -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">69.</span> Butter Chicken / Pollo con Mantequilla</h4>
+    <p class="text-sm text-gray-600">
+      The most exclusive North Indian dish. Succulent chicken served in a creamy sauce laced with butter
+      <br>
+      (El plato más exclusivo del norte de la India. Pollo suculento servido en una salsa cremosa con mantequilla)
+    </p>
+  </div>
+  <span class="font-bold text-primary">11,95€</span>
 </div>
+
+<!-- 70 Mango Chicken -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">70.</span> Mango Chicken / Mango Pollo</h4>
+    <p class="text-sm text-gray-600">
+      Tender chicken cooked in mango flavoured semi sweet curry sauce
+      <br>
+      (Tierno pollo cocinado en salsa de curry semidulce con sabor a mango)
+    </p>
+  </div>
+  <span class="font-bold text-primary">11,95€</span>
+</div>
+
+<!-- 71 Chicken Bartha -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">71.</span> Chicken Bartha / Pollo Bartha</h4>
+    <p class="text-sm text-gray-600">
+      Succulent pieces of chicken cooked with chopped aubergines in special tikka sauce
+      <br>
+      (Jugosos trozos de pollo cocinados con berenjenas troceadas en salsa especial tikka)
+    </p>
+  </div>
+  <span class="font-bold text-primary">11,50€</span>
+</div>
+
+<!-- 72 Chicken Kolhapuri -->
 <div class="flex justify-between items-start">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">23.</span> Mango Chicken / Pollo al Mango</h4>
-<p class="text-sm text-gray-600">
-Pollo en salsa cremosa de mango, coco y especias suaves
-<br>
-Chicken in creamy mango, coconut and mild spices sauce
-</p>
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">72.</span> Chicken Kolhapuri / Pollo Kolhapuri</h4>
+    <p class="text-sm text-gray-600">
+      Boneless chicken cooked with fresh home made cheese and tomato in medium gravy
+      <br>
+      (Pollo deshuesado cocinado con queso fresco casero y tomate en salsa mediana)
+    </p>
+  </div>
+  <span class="font-bold text-primary">11,50€</span>
 </div>
-<span class="font-bold text-primary">13,95€</span>
+<!-- 73 Murg Tikka Achari -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">73.</span> Murg Tikka Achari / Pollo Tikka Achari</h4>
+    <p class="text-sm text-gray-600">
+      Chicken Tikka cooked in pickled spices. Delicious and tangy. Specialty of our chef
+      <br>
+      (Pollo Tikka cocinado con especias en escabeche. Delicioso y picante. Especialidad de nuestro chef)
+    </p>
+  </div>
+  <span class="font-bold text-primary">11,90€</span>
 </div>
+
+<!-- 74 Murg Tikka Begum Bahar -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">74.</span> Murg Tikka Begum Bahar / Pollo Tikka Begum Bahar</h4>
+    <p class="text-sm text-gray-600">
+      Chicken tikka cooked in rich Indian sauce with almonds
+      <br>
+      (Pollo Tikka cocinado en rica salsa india con almendras)
+    </p>
+  </div>
+  <span class="font-bold text-primary">11,95€</span>
 </div>
+
+<!-- 75 Chicken Mumtaz -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">75.</span> Chicken Mumtaz / Pollo Mumtaz</h4>
+    <p class="text-sm text-gray-600">
+      Boneless chicken cooked in rich almond sauce
+      <br>
+      (Pollo deshuesado cocinado en rica salsa de almendras)
+    </p>
+  </div>
+  <span class="font-bold text-primary">11,95€</span>
 </div>
+
+<!-- 75A Methi Chicken -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">75A.</span> Methi Chicken / Pollo Methi</h4>
+    <p class="text-sm text-gray-600">
+      Chicken cooked in fenugreek, tomato, onions and spices
+      <br>
+      (Pollo cocinado con hojas de fenogreco, cebolla, tomates y especias)
+    </p>
+  </div>
+  <span class="font-bold text-primary">11,95€</span>
+</div>
+
+<!-- 76 Murg Dahi Wala -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">76.</span> Murg Dahi Wala / Pollo Dahi Wala</h4>
+    <p class="text-sm text-gray-600">
+      Chicken marinated in yogurt and cooked in traditional Indian curry
+      <br>
+      (Tierno pollo marinado en yogur y cocinado en curry tradicional indio)
+    </p>
+  </div>
+  <span class="font-bold text-primary">11,95€</span>
+</div>
+
+<!-- 77 Keema Hari Methi -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">77.</span> Keema Hari Methi / Keema Hari Methi</h4>
+    <p class="text-sm text-gray-600">
+      Mince meat cooked with green fenugreek in special Indian sauce
+      <br>
+      (Carne picada cocinada con alholva verde en salsa especial india)
+    </p>
+  </div>
+  <span class="font-bold text-primary">11,95€</span>
+</div>
+
+<!-- 78 Mutton Khumb Wala -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">78.</span> Mutton Khumb Wala / Cordero Khumb Wala</h4>
+    <p class="text-sm text-gray-600">
+      Fresh mushrooms and lamb cooked in mughlai curry sauce
+      <br>
+      (Champiñones frescos y cordero cocinados en salsa de curry mughlai)
+    </p>
+  </div>
+  <span class="font-bold text-primary">12,50€</span>
+</div>
+
+<!-- 79 Mutton Chutney Wala -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">79.</span> Mutton Chutney Wala / Cordero Chutney Wala</h4>
+    <p class="text-sm text-gray-600">
+      Lamb and mint tikka marinated in yogurt and cooked in medium curry sauce
+      <br>
+      (Tikka de cordero y menta marinado en yogur y cocinado en curry de intensidad media)
+    </p>
+  </div>
+  <span class="font-bold text-primary">12,50€</span>
+</div>
+
+<!-- 80 Dahi Ghost -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">80.</span> Dahi Ghost / Dahi Ghosht</h4>
+    <p class="text-sm text-gray-600">
+      Tender lamb served in a curry yogurt sauce
+      <br>
+      (Tierno cordero servido en salsa de yogur al curry)
+    </p>
+  </div>
+  <span class="font-bold text-primary">12,00€</span>
+</div>
+
+<!-- 81 Bengali Fish Curry -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">81.</span> Bengali Fish Curry / Bengali Pescado Curry</h4>
+    <p class="text-sm text-gray-600">
+      Fish marinated in gram flour & garlic paste and cooked in hot Indian sauce
+      <br>
+      (Pescado marinado en harina de garbanzo y pasta de ajo cocinado en salsa india picante)
+    </p>
+  </div>
+  <span class="font-bold text-primary">12,00€</span>
+</div>
+
+<!-- 82 Goan Fish -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">82.</span> Goan Fish / Goan Pescado</h4>
+    <p class="text-sm text-gray-600">
+      Fish marinated in Goan spices and herbs paste & spicy curry cooked in Goan curry
+      <br>
+      (Pescado marinado con especias herbales de Goa y cocinado en curry de Goa)
+    </p>
+  </div>
+  <span class="font-bold text-primary">13,50€</span>
+</div>
+
+<!-- 83 Sartaj Mixed Platter -->
+<div class="flex justify-between items-start">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">83.</span> Sartaj Mixed Platter / Sartaj Mixto Platter</h4>
+    <p class="text-sm text-gray-600">
+      Chef’s selection of our different meats (if not selected) cooked with traditional punjabi spices
+      <br>
+      (La especialidad de nuestro chef. Diferentes carnes (si no se elige) cocinadas con especias tradicionales punjabi)
+    </p>
+  </div>
+  <span class="font-bold text-primary">15,99€</span>
+</div>
+
 <!-- Vegetable Dishes -->
 <div id="vegetable" class="menu-section">
 <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos de Verdura / Vegetable Dishes</h3>
