--- a/index.html
+++ b/index.html
@@ -810,21 +810,20 @@ Discover the authentic flavors of India with our traditional recipes.
 <div id="mains" class="menu-section">
   <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos Principales / Main Dishes</h3>
   <div class="space-y-6">
- <!-- 49 Punjabi Curry -->
+<!-- 49 Punjabi Curry -->
 <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
+  <div class="flex-grow">
     <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">49.</span> Punjabi Curry</h4>
     <p class="text-sm text-gray-600">
-      A traditional medium spiced curry
-      <br>
-      (Pedazos frescos de cebolla con salsa curry típica indú)
+      A traditional medium spiced curry<br>
+      Pedazos frescos de cebolla con salsa curry típica hindú
     </p>
     <div class="mt-2 space-y-1 text-sm">
-      <div class="flex justify-between"><span>Chicken (Pollo)</span><span>9,25€</span></div>
-      <div class="flex justify-between"><span>Lamb (Cordero)</span><span>10,25€</span></div>
-      <div class="flex justify-between"><span>Prawn (Gambas)</span><span>10,25€</span></div>
-      <div class="flex justify-between"><span>King Prawn (Langostinos)</span><span>12,00€</span></div>
-      <div class="flex justify-between"><span>Fish (Pescado)</span><span>10,25€</span></div>
+      <div class="flex justify-between"><span>Chicken (Pollo)</span><span>9,25 €</span></div>
+      <div class="flex justify-between"><span>Lamb (Cordero)</span><span>10,25 €</span></div>
+      <div class="flex justify-between"><span>Prawn (Gambas)</span><span>10,25 €</span></div>
+      <div class="flex justify-between"><span>King Prawn (Langostinos)</span><span>12,00 €</span></div>
+      <div class="flex justify-between"><span>Fish (Pescado)</span><span>10,25 €</span></div>
     </div>
   </div>
 </div>
