--- a/index.html
+++ b/index.html
@@ -1154,17 +1154,17 @@ Discover the authentic flavors of India with our traditional recipes.
 <div class="space-y-6">
 <!-- 67 Chicken Hars Bara -->
 <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
+  <div class="flex-grow">
     <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">67.</span> Chicken Hars Bara / Pollo Hars Bara</h4>
     <p class="text-sm text-gray-600">
-      Succulent pieces of chicken marinated in yogurt and cooked in special mint sauce
-      <br>
-      (Jugosos trozos de pollo marinados en yogur y cocinados en salsa especial de menta)
+      Succulent pieces of chicken marinated in yogurt and cooked in special mint sauce<br>
+      Jugosos trozos de pollo marinados en yogur y cocinados en salsa especial de menta
     </p>
+    <div class="mt-2 space-y-1 text-sm">
+      <div class="flex justify-between"><span>Main</span><span>10,90€</span></div>
+    </div>
   </div>
-  <span class="font-bold text-primary">10,90€</span>
 </div>
-
 <!-- 68 Chicken Khumb (Mushroom) Wala -->
 <div class="flex justify-between items-start pb-4 border-b border-gray-200">
   <div>
