--- a/index.html
+++ b/index.html
@@ -1384,6 +1384,8 @@ Discover the authentic flavors of India with our traditional recipes.
   </div>
   <span class="font-bold text-primary">15,99€</span>
 </div>
+  </div>
+  </div>
 
 <!-- Vegetable Dishes -->
 <div id="vegetable" class="menu-section">
