--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Discover the authentic flavors of India with our traditional recipes.
   <button class="menu-tab col-span-2 px-3 py-2 text-sm font-medium border-2 border-[#B8860B] rounded-lg hover:bg-[#B8860B]/10 transition-all whitespace-normal break-words" data-target="mains">
     Platos Principales / Main Dishes
   </button>
-  <button class="menu-tab col-span-2 px-3 py-2 text-sm font-medium border-2 border-[#B8860B] rounded-lg hover:bg-[#B8860B]/10 transition-all whitespace-normal break-words" data-target="chef">
+  <button class="menu-tab col-span-2 px-3 py-2 text-sm font-medium border-2 border-[#B8860B] rounded-lg hover:bg-[#B8860B]/10 transition-all whitespace-normal break-words" data-target="Especialidades">
     Especialidades del Chef / Chef's Specials
   </button>
   <button class="menu-tab col-span-2 px-3 py-2 text-sm font-medium border-2 border-[#B8860B] rounded-lg hover:bg-[#B8860B]/10 transition-all whitespace-normal break-words" data-target="vegetable">
@@ -1147,23 +1147,21 @@ Discover the authentic flavors of India with our traditional recipes.
     </div>
   </div>
 </div>
-
 <!-- Chef's Specials -->
-<div id="chef" class="menu-section">
-<h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Especialidades del Chef / Chef's Specials</h3>
-<div class="space-y-6">
+<div id="Especialidades" class="menu-section">
+  <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Especialidades del Chef / Chef's Specials</h3>
+  <div class="space-y-6">
 <!-- 67 Chicken Hars Bara -->
 <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div class="flex-grow">
+  <div>
     <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">67.</span> Chicken Hars Bara / Pollo Hars Bara</h4>
     <p class="text-sm text-gray-600">
-      Succulent pieces of chicken marinated in yogurt and cooked in special mint sauce<br>
+      Succulent pieces of chicken marinated in yogurt and cooked in special mint sauce
+      <br>
       Jugosos trozos de pollo marinados en yogur y cocinados en salsa especial de menta
     </p>
-    <div class="mt-2 space-y-1 text-sm">
-      <div class="flex justify-between"><span>Main</span><span>10,90€</span></div>
-    </div>
-  </div>
+  <span class="font-bold text-primary">10,90€</span>
+</div>
 </div>
 <!-- 68 Chicken Khumb (Mushroom) Wala -->
 <div class="flex justify-between items-start pb-4 border-b border-gray-200">
@@ -1383,7 +1381,6 @@ Discover the authentic flavors of India with our traditional recipes.
     </p>
   </div>
   <span class="font-bold text-primary">15,99€</span>
-</div>
   </div>
   </div>
 
