--- a/index.html
+++ b/index.html
@@ -1147,6 +1147,8 @@ Discover the authentic flavors of India with our traditional recipes.
     </div>
   </div>
 </div>
+    </div>
+    </div>
 <!-- Chef's Specials -->
 <div id="Especialidades" class="menu-section">
   <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Especialidades del Chef / Chef's Specials</h3>
