--- a/index.html
+++ b/index.html
@@ -1390,52 +1390,139 @@ Discover the authentic flavors of India with our traditional recipes.
 <div id="vegetable" class="menu-section">
 <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos de Verdura / Vegetable Dishes</h3>
 <div class="space-y-6">
-<div class="grid grid-cols-[1fr_auto] gap-x-8 pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">24.</span> Palak Paneer / Paneer con Espinacas</h4>
-<p class="text-sm text-gray-600">
-Queso fresco indio con espinacas cremosas y especias
-<br>
-Indian fresh cheese with creamy spinach and spices
-</p>
+<div id="vegetable" class="menu-section">
+  <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos de Verdura / Vegetable Dishes</h3>
+  <div class="space-y-6">
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">84.</span> Dall Makhani</h4>
+        <p class="text-sm text-gray-600">Red kidney beans and black lentils cooked in creamy tomato sauce<br>(Frijoles rojos y lentejas negras cocinados en salsa cremosa de tomate fresco)</p>
+      </div>
+      <span class="font-bold text-primary">7,65€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">85.</span> Tarka Dall</h4>
+        <p class="text-sm text-gray-600">Lentils with onion, tomato and garlic<br>(Lentejas con cebolla, tomate y ajo)</p>
+      </div>
+      <span class="font-bold text-primary">7,65€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">86.</span> Bombay Aloo</h4>
+        <p class="text-sm text-gray-600">Potatoes with onion, green pepper in medium gravy<br>(Patatas con cebolla y pimiento verde, en salsa media)</p>
+      </div>
+      <span class="font-bold text-primary">7,65€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">87.</span> Channa Masala</h4>
+        <p class="text-sm text-gray-600">Chickpeas with spices and herbs<br>(Garbanzos con especias y hierbas)</p>
+      </div>
+      <span class="font-bold text-primary">7,50€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">88.</span> Sag Aloo</h4>
+    <p class="text-sm text-gray-600">Spinach with potatoes in Indian spices<br>(Espinacas con papas en especias indias especiales)</p>
+  </div>
+  <span class="font-bold text-primary">7,25€</span>
 </div>
-<span class="font-bold text-primary text-right whitespace-nowrap">10,95€</span>
-</div>
+
 <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">25.</span> Chana Masala / Garbanzos Masala</h4>
-<p class="text-sm text-gray-600">
-Garbanzos cocinados con tomate, cebolla y especias
-<br>
-Chickpeas cooked with tomato, onion and spices
-</p>
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">89.</span> Karahi Paneer (fresh home made cheese)</h4>
+    <p class="text-sm text-gray-600">Cottage cheese in special iron pan with herbs and spices<br>(Requesón cocinado en una sartén especial de hierro con hierbas y especias suaves)</p>
+  </div>
+  <span class="font-bold text-primary">7,95€</span>
 </div>
-<span class="font-bold text-primary">9,95€</span>
-</div>
+
 <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">26.</span> Dal Makhani / Dal Makhani</h4>
-<p class="text-sm text-gray-600">
-Lentejas negras y judías rojas cocinadas lentamente con mantequilla y especias
-<br>
-Slow-cooked black lentils and red beans with butter and spices
-</p>
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">90.</span> Palak Paneer</h4>
+    <p class="text-sm text-gray-600">Fresh cheese with spinach and spices<br>(Queso fresco con espinacas y especias)</p>
+  </div>
+  <span class="font-bold text-primary">7,50€</span>
 </div>
-<span class="font-bold text-primary">9,50€</span>
+
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">91.</span> Muttor Mushroom Paneer</h4>
+    <p class="text-sm text-gray-600">Cheese with mushrooms and peas in mild sauce<br>(Queso fresco con champiñones y guisantes en salsa suave)</p>
+  </div>
+  <span class="font-bold text-primary">7,95€</span>
 </div>
+
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">92.</span> Sahi Paneer</h4>
+    <p class="text-sm text-gray-600">Cheese with cream and butter in sweet and sour gravy<br>(Queso fresco con nata y mantequilla en salsa agridulce)</p>
+  </div>
+  <span class="font-bold text-primary">7,95€</span>
+</div>
+
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">96.</span> Vegetable Jalfrezi / Vegetal Jalfrezi</h4>
+    <p class="text-sm text-gray-600">Vegetables fried in typical jalfrezi hot sauce<br>(Verduras en salsa típica jalfrezi picante)</p>
+  </div>
+  <span class="font-bold text-primary">7,95€</span>
+</div>
+
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">97.</span> Mixed Vegetables / Verdura Mixta</h4>
+    <p class="text-sm text-gray-600">Mixed vegetables fried in mild curry sauce<br>(Verduras mixtas fritas en una suave salsa de curry)</p>
+  </div>
+  <span class="font-bold text-primary">7,25€</span>
+</div>
+
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">98.</span> Navrattan Korma</h4>
+    <p class="text-sm text-gray-600">Nine vegetables in rich sweet and sour sauce<br>(Nueve verduras en rica salsa agridulce)</p>
+  </div>
+  <span class="font-bold text-primary">7,95€</span>
+</div>
+
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">99.</span> Aaloo Gobhi Masala</h4>
+    <p class="text-sm text-gray-600">Cauliflower and potatoes in herbs and spices<br>(Coliflor y patatas delicadas con especias especiales)</p>
+  </div>
+  <span class="font-bold text-primary">7,25€</span>
+</div>
+
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">102.</span> Malai Kofta</h4>
+    <p class="text-sm text-gray-600">Fried potatoes in almond sauce<br>(Patatas fritas en salsa de almendras)</p>
+  </div>
+  <span class="font-bold text-primary">7,90€</span>
+</div>
+
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">103.</span> Mushroom Bhaji / Champiñones Bhaji</h4>
+    <p class="text-sm text-gray-600">Mushrooms with onion, tomato and spices<br>(Champiñones con cebolla, tomate y especias)</p>
+  </div>
+  <span class="font-bold text-primary">7,45€</span>
+</div>
+
 <div class="flex justify-between items-start">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">27.</span> Mixed Vegetable Curry / Curry de Verduras Mixtas</h4>
-<p class="text-sm text-gray-600">
-Selección de verduras frescas en salsa de curry
-<br>
-Selection of fresh vegetables in curry sauce
-</p>
+  <div>
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">104.</span> Bengan Ka Bartha</h4>
+    <p class="text-sm text-gray-600">Aubergines with yogurt and onion in medium gravy<br>(Berenjenas con yogur y cebolla en salsa media)</p>
+  </div>
+  <span class="font-bold text-primary">7,45€</span>
 </div>
-<span class="font-bold text-primary">9,95€</span>
-</div>
-</div>
-</div>
+  </div>
+  </div>
+  </div>
 <!-- Biryani -->
 <div id="biryani" class="menu-section">
 <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Biryani (Arroz Especial / Special Rice)</h3>
