--- a/index.html
+++ b/index.html
@@ -1385,7 +1385,7 @@ Discover the authentic flavors of India with our traditional recipes.
   <span class="font-bold text-primary">15,99€</span>
   </div>
   </div>
-
+  </div>
 <!-- Vegetable Dishes -->
 <div id="vegetable" class="menu-section">
 <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos de Verdura / Vegetable Dishes</h3>
