--- a/index.html
+++ b/index.html
@@ -1386,6 +1386,7 @@ Discover the authentic flavors of India with our traditional recipes.
   </div>
   </div>
   </div>
+    </div>
 <!-- Vegetable Dishes -->
 <div id="vegetable" class="menu-section">
 <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos de Verdura / Vegetable Dishes</h3>
