--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ Discover the authentic flavors of India with our traditional recipes.
   <button class="menu-tab col-span-2 px-3 py-2 text-sm font-medium border-2 border-[#B8860B] rounded-lg hover:bg-[#B8860B]/10 transition-all whitespace-normal break-words" data-target="Especialidades">
     Especialidades del Chef / Chef's Specials
   </button>
-  <button class="menu-tab col-span-2 px-3 py-2 text-sm font-medium border-2 border-[#B8860B] rounded-lg hover:bg-[#B8860B]/10 transition-all whitespace-normal break-words" data-target="vegetable">
+  <button class="menu-tab col-span-2 px-3 py-2 text-sm font-medium border-2 border-[#B8860B] rounded-lg hover:bg-[#B8860B]/10 transition-all whitespace-normal break-words" data-target="Verdes">
     Platos de Verdura / Vegetable Dishes
   </button>
   <button class="menu-tab px-3 py-2 text-sm font-medium border-2 border-[#B8860B] rounded-lg hover:bg-[#B8860B]/10 transition-all whitespace-normal break-words" data-target="biryani">
@@ -1387,14 +1387,28 @@ Discover the authentic flavors of India with our traditional recipes.
   </div>
   </div>
     </div>
+
 <!-- Vegetable Dishes -->
-<div id="vegetable" class="menu-section">
-<h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos de Verdura / Vegetable Dishes</h3>
-<div class="space-y-6">
-<div id="vegetable" class="menu-section">
+<div id="Verdes" class="menu-section">
   <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos de Verdura / Vegetable Dishes</h3>
   <div class="space-y-6">
-
+    <!-- 49 Punjabi Curry -->
+<div class="flex justify-between items-start pb-4 border-b border-gray-200">
+  <div class="flex-grow">
+    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">49.</span> Punjabi Curry</h4>
+    <p class="text-sm text-gray-600">
+      A traditional medium spiced curry<br>
+      Pedazos frescos de cebolla con salsa curry típica hindú
+    </p>
+    <div class="mt-2 space-y-1 text-sm">
+      <div class="flex justify-between"><span>Chicken (Pollo)</span><span>9,25 €</span></div>
+      <div class="flex justify-between"><span>Lamb (Cordero)</span><span>10,25 €</span></div>
+      <div class="flex justify-between"><span>Prawn (Gambas)</span><span>10,25 €</span></div>
+      <div class="flex justify-between"><span>King Prawn (Langostinos)</span><span>12,00 €</span></div>
+      <div class="flex justify-between"><span>Fish (Pescado)</span><span>10,25 €</span></div>
+    </div>
+  </div>
+</div>
     <div class="flex justify-between items-start pb-4 border-b border-gray-200">
       <div>
         <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">84.</span> Dall Makhani</h4>
@@ -1402,7 +1416,6 @@ Discover the authentic flavors of India with our traditional recipes.
       </div>
       <span class="font-bold text-primary">7,65€</span>
     </div>
-
     <div class="flex justify-between items-start pb-4 border-b border-gray-200">
       <div>
         <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">85.</span> Tarka Dall</h4>
@@ -1410,7 +1423,6 @@ Discover the authentic flavors of India with our traditional recipes.
       </div>
       <span class="font-bold text-primary">7,65€</span>
     </div>
-
     <div class="flex justify-between items-start pb-4 border-b border-gray-200">
       <div>
         <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">86.</span> Bombay Aloo</h4>
@@ -1418,7 +1430,6 @@ Discover the authentic flavors of India with our traditional recipes.
       </div>
       <span class="font-bold text-primary">7,65€</span>
     </div>
-
     <div class="flex justify-between items-start pb-4 border-b border-gray-200">
       <div>
         <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">87.</span> Channa Masala</h4>
@@ -1427,103 +1438,90 @@ Discover the authentic flavors of India with our traditional recipes.
       <span class="font-bold text-primary">7,50€</span>
     </div>
     <div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
-    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">88.</span> Sag Aloo</h4>
-    <p class="text-sm text-gray-600">Spinach with potatoes in Indian spices<br>(Espinacas con papas en especias indias especiales)</p>
-  </div>
-  <span class="font-bold text-primary">7,25€</span>
-</div>
-
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
-    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">89.</span> Karahi Paneer (fresh home made cheese)</h4>
-    <p class="text-sm text-gray-600">Cottage cheese in special iron pan with herbs and spices<br>(Requesón cocinado en una sartén especial de hierro con hierbas y especias suaves)</p>
-  </div>
-  <span class="font-bold text-primary">7,95€</span>
-</div>
-
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
-    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">90.</span> Palak Paneer</h4>
-    <p class="text-sm text-gray-600">Fresh cheese with spinach and spices<br>(Queso fresco con espinacas y especias)</p>
-  </div>
-  <span class="font-bold text-primary">7,50€</span>
-</div>
-
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
-    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">91.</span> Muttor Mushroom Paneer</h4>
-    <p class="text-sm text-gray-600">Cheese with mushrooms and peas in mild sauce<br>(Queso fresco con champiñones y guisantes en salsa suave)</p>
-  </div>
-  <span class="font-bold text-primary">7,95€</span>
-</div>
-
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
-    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">92.</span> Sahi Paneer</h4>
-    <p class="text-sm text-gray-600">Cheese with cream and butter in sweet and sour gravy<br>(Queso fresco con nata y mantequilla en salsa agridulce)</p>
-  </div>
-  <span class="font-bold text-primary">7,95€</span>
-</div>
-
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
-    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">96.</span> Vegetable Jalfrezi / Vegetal Jalfrezi</h4>
-    <p class="text-sm text-gray-600">Vegetables fried in typical jalfrezi hot sauce<br>(Verduras en salsa típica jalfrezi picante)</p>
-  </div>
-  <span class="font-bold text-primary">7,95€</span>
-</div>
-
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
-    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">97.</span> Mixed Vegetables / Verdura Mixta</h4>
-    <p class="text-sm text-gray-600">Mixed vegetables fried in mild curry sauce<br>(Verduras mixtas fritas en una suave salsa de curry)</p>
-  </div>
-  <span class="font-bold text-primary">7,25€</span>
-</div>
-
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
-    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">98.</span> Navrattan Korma</h4>
-    <p class="text-sm text-gray-600">Nine vegetables in rich sweet and sour sauce<br>(Nueve verduras en rica salsa agridulce)</p>
-  </div>
-  <span class="font-bold text-primary">7,95€</span>
-</div>
-
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
-    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">99.</span> Aaloo Gobhi Masala</h4>
-    <p class="text-sm text-gray-600">Cauliflower and potatoes in herbs and spices<br>(Coliflor y patatas delicadas con especias especiales)</p>
-  </div>
-  <span class="font-bold text-primary">7,25€</span>
-</div>
-
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
-    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">102.</span> Malai Kofta</h4>
-    <p class="text-sm text-gray-600">Fried potatoes in almond sauce<br>(Patatas fritas en salsa de almendras)</p>
-  </div>
-  <span class="font-bold text-primary">7,90€</span>
-</div>
-
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-  <div>
-    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">103.</span> Mushroom Bhaji / Champiñones Bhaji</h4>
-    <p class="text-sm text-gray-600">Mushrooms with onion, tomato and spices<br>(Champiñones con cebolla, tomate y especias)</p>
-  </div>
-  <span class="font-bold text-primary">7,45€</span>
-</div>
-
-<div class="flex justify-between items-start">
-  <div>
-    <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">104.</span> Bengan Ka Bartha</h4>
-    <p class="text-sm text-gray-600">Aubergines with yogurt and onion in medium gravy<br>(Berenjenas con yogur y cebolla en salsa media)</p>
-  </div>
-  <span class="font-bold text-primary">7,45€</span>
-</div>
-  </div>
-  </div>
-  </div>
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">88.</span> Sag Aloo</h4>
+        <p class="text-sm text-gray-600">Spinach with potatoes in Indian spices<br>(Espinacas con papas en especias indias especiales)</p>
+      </div>
+      <span class="font-bold text-primary">7,25€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">89.</span> Karahi Paneer (fresh home made cheese)</h4>
+        <p class="text-sm text-gray-600">Cottage cheese in special iron pan with herbs and spices<br>(Requesón cocinado en una sartén especial de hierro con hierbas y especias suaves)</p>
+      </div>
+      <span class="font-bold text-primary">7,95€</span>
+   </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">90.</span> Palak Paneer</h4>
+        <p class="text-sm text-gray-600">Fresh cheese with spinach and spices<br>(Queso fresco con espinacas y especias)</p>
+      </div>
+      <span class="font-bold text-primary">7,50€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">91.</span> Muttor Mushroom Paneer</h4>
+        <p class="text-sm text-gray-600">Cheese with mushrooms and peas in mild sauce<br>(Queso fresco con champiñones y guisantes en salsa suave)</p>
+      </div>
+      <span class="font-bold text-primary">7,95€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">92.</span> Sahi Paneer</h4>
+        <p class="text-sm text-gray-600">Cheese with cream and butter in sweet and sour gravy<br>(Queso fresco con nata y mantequilla en salsa agridulce)</p>
+      </div>
+      <span class="font-bold text-primary">7,95€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">96.</span> Vegetable Jalfrezi / Vegetal Jalfrezi</h4>
+        <p class="text-sm text-gray-600">Vegetables fried in typical jalfrezi hot sauce<br>(Verduras en salsa típica jalfrezi picante)</p>
+      </div>
+      <span class="font-bold text-primary">7,95€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">97.</span> Mixed Vegetables / Verdura Mixta</h4>
+        <p class="text-sm text-gray-600">Mixed vegetables fried in mild curry sauce<br>(Verduras mixtas fritas en una suave salsa de curry)</p>
+      </div>
+      <span class="font-bold text-primary">7,25€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">98.</span> Navrattan Korma</h4>
+        <p class="text-sm text-gray-600">Nine vegetables in rich sweet and sour sauce<br>(Nueve verduras en rica salsa agridulce)</p>
+      </div>
+      <span class="font-bold text-primary">7,95€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">99.</span> Aaloo Gobhi Masala</h4>
+        <p class="text-sm text-gray-600">Cauliflower and potatoes in herbs and spices<br>(Coliflor y patatas delicadas con especias especiales)</p>
+      </div>
+      <span class="font-bold text-primary">7,25€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">102.</span> Malai Kofta</h4>
+        <p class="text-sm text-gray-600">Fried potatoes in almond sauce<br>(Patatas fritas en salsa de almendras)</p>
+      </div>
+      <span class="font-bold text-primary">7,90€</span>
+    </div>
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">103.</span> Mushroom Bhaji / Champiñones Bhaji</h4>
+        <p class="text-sm text-gray-600">Mushrooms with onion, tomato and spices<br>(Champiñones con cebolla, tomate y especias)</p>
+      </div>
+      <span class="font-bold text-primary">7,45€</span>
+    </div>
+    <div class="flex justify-between items-start">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">104.</span> Bengan Ka Bartha</h4>
+        <p class="text-sm text-gray-600">Aubergines with yogurt and onion in medium gravy<br>(Berenjenas con yogur y cebolla en salsa media)</p>
+      </div>
+      <span class="font-bold text-primary">7,45€</span>
+    </div>
+    </div>
 <!-- Biryani -->
 <div id="biryani" class="menu-section">
 <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Biryani (Arroz Especial / Special Rice)</h3>
