--- a/index.html
+++ b/index.html
@@ -1386,8 +1386,6 @@ Discover the authentic flavors of India with our traditional recipes.
   </div>
   </div>
   </div>
-    </div>
-
 <!-- Vegetable Dishes -->
 <div id="Verdes" class="menu-section">
   <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Platos de Verdura / Vegetable Dishes</h3>
@@ -1522,45 +1520,57 @@ Discover the authentic flavors of India with our traditional recipes.
       <span class="font-bold text-primary">7,45€</span>
     </div>
     </div>
-<!-- Biryani -->
+  </div>
+<!-- Biryani Dishes -->
 <div id="biryani" class="menu-section">
-<h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Biryani (Arroz Especial / Special Rice)</h3>
-<div class="space-y-6">
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">28.</span> Vegetable Biryani / Biryani de Verduras</h4>
-<p class="text-sm text-gray-600">
-Arroz basmati con verduras y especias aromáticas
-<br>
-Basmati rice with vegetables and aromatic spices
-</p>
+  <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Biryani</h3>
+  <div class="space-y-6">
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">105.</span> Chicken / Pollo</h4>
+      </div>
+      <span class="font-bold text-primary">10,25€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">106.</span> Tikka Chicken / Pollo Tikka</h4>
+      </div>
+      <span class="font-bold text-primary">11,45€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">107.</span> Lamb / Cordero</h4>
+      </div>
+      <span class="font-bold text-primary">11,50€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">108.</span> Kings Prawns / Langostinos</h4>
+      </div>
+      <span class="font-bold text-primary">12,50€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">109.</span> Vegetables / Vegetal</h4>
+      </div>
+      <span class="font-bold text-primary">9,50€</span>
+    </div>
+
+    <div class="flex justify-between items-start">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">110.</span> Sartaj Special Biryani</h4>
+      </div>
+      <span class="font-bold text-primary">14,95€</span>
+    </div>
+
+  </div>
 </div>
-<span class="font-bold text-primary">10,95€</span>
-</div>
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">29.</span> Chicken Biryani / Biryani de Pollo</h4>
-<p class="text-sm text-gray-600">
-Arroz basmati con pollo y especias aromáticas
-<br>
-Basmati rice with chicken and aromatic spices
-</p>
-</div>
-<span class="font-bold text-primary">12,95€</span>
-</div>
-<div class="flex justify-between items-start">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">30.</span> Lamb Biryani / Biryani de Cordero</h4>
-<p class="text-sm text-gray-600">
-Arroz basmati con cordero y especias aromáticas
-<br>
-Basmati rice with lamb and aromatic spices
-</p>
-</div>
-<span class="font-bold text-primary">14,95€</span>
-</div>
-</div>
-</div>
+
 <!-- Basmati Rice -->
 <div id="rice" class="menu-section">
 <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Basmati Rice / Arroz Basmati</h3>
