--- a/index.html
+++ b/index.html
@@ -1570,97 +1570,227 @@ Discover the authentic flavors of India with our traditional recipes.
 
   </div>
 </div>
-
-<!-- Basmati Rice -->
+<!-- Rice Dishes -->
 <div id="rice" class="menu-section">
-<h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Basmati Rice / Arroz Basmati</h3>
-<div class="space-y-6">
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">31.</span> Plain Rice / Arroz Blanco</h4>
-<p class="text-sm text-gray-600">
-Arroz basmati cocido al vapor
-<br>
-Steamed basmati rice
-</p>
+  <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Arroces / Rice</h3>
+  <div class="space-y-6">
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">111.</span> Boiled / Hervido</h4>
+      </div>
+      <span class="font-bold text-primary">2,99€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">112.</span> Pilau / Pilau</h4>
+      </div>
+      <span class="font-bold text-primary">3,25€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">113.</span> Onion / Arroz con Cebolla</h4>
+      </div>
+      <span class="font-bold text-primary">3,50€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">114.</span> Coconut / Arroz con Coco</h4>
+      </div>
+      <span class="font-bold text-primary">3,95€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">115.</span> Jeera (Cumin) / Arroz con Comino</h4>
+      </div>
+      <span class="font-bold text-primary">3,50€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">116.</span> Keema (Mince) / Arroz con Carne Picada</h4>
+      </div>
+      <span class="font-bold text-primary">4,25€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">117.</span> Egg Fried / Arroz con Huevo Frito</h4>
+      </div>
+      <span class="font-bold text-primary">4,10€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">118.</span> Vegetable / Arroz con Verdura</h4>
+      </div>
+      <span class="font-bold text-primary">3,99€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">119.</span> Lemon / Arroz con Limón</h4>
+      </div>
+      <span class="font-bold text-primary">3,99€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">120.</span> Mushroom / Arroz con Champiñón</h4>
+      </div>
+      <span class="font-bold text-primary">3,99€</span>
+    </div>
+
+    <div class="flex justify-between items-start">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">121.</span> Saffron / Arroz con Azafrán</h4>
+      </div>
+      <span class="font-bold text-primary">4,25€</span>
+    </div>
+
+  </div>
 </div>
-<span class="font-bold text-primary">3,50€</span>
+<!-- Nan Bread -->
+<div id="nan" class="menu-section">
+  <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Nan Bread / Pan (Nan)</h3>
+  <div class="space-y-6">
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">122.</span> Tandori Plain Royi</h4>
+        <p class="text-sm text-gray-600">Plain bread baked in clay oven<br>(Llanura pan cocinado en horno de arcilla)</p>
+      </div>
+      <span class="font-bold text-primary">1,99€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">123.</span> Tandori Plain Prantha</h4>
+        <p class="text-sm text-gray-600">Plain prantha cooked in clay oven<br>(Llanura prantha cocinado en horno de arcilla)</p>
+      </div>
+      <span class="font-bold text-primary">3,25€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">124.</span> Tandori Bhtura</h4>
+        <p class="text-sm text-gray-600">Mint prantha cooked in clay oven<br>(Menta prantha cocinado en horno de arcilla)</p>
+      </div>
+      <span class="font-bold text-primary">3,50€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">125.</span> Tandoori Vegetable Prantha</h4>
+        <p class="text-sm text-gray-600">Prantha vegetable cooked in clay oven<br>(Verdura prantha cocinada en horno de arcilla)</p>
+      </div>
+      <span class="font-bold text-primary">3,99€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">126.</span> Onion Nan / Pan de Cebolla</h4>
+      </div>
+      <span class="font-bold text-primary">3,10€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">127.</span> Garlic Nan / Pan de Ajo</h4>
+      </div>
+      <span class="font-bold text-primary">3,10€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">128.</span> Garlic Kulcha / Ajo Kulcha</h4>
+      </div>
+      <span class="font-bold text-primary">3,99€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">129.</span> Plain Nan / Pan</h4>
+      </div>
+      <span class="font-bold text-primary">2,75€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">130.</span> Keema (Mince) Nan / Pan con Carne Picada</h4>
+      </div>
+      <span class="font-bold text-primary">3,99€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">131.</span> Peshawari Nan / Pan de Coco</h4>
+      </div>
+      <span class="font-bold text-primary">3,99€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">132.</span> Butter Nan / Pan de Mantequilla</h4>
+      </div>
+      <span class="font-bold text-primary">3,50€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">133.</span> Cheese Nan / Pan de Queso</h4>
+      </div>
+      <span class="font-bold text-primary">3,75€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-4 border-b border-gray-200">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">134.</span> Sartaj Special Nan / Sartaj Especial Pan</h4>
+      </div>
+      <span class="font-bold text-primary">4,25€</span>
+    </div>
+
+    <div class="flex justify-between items-start">
+      <div>
+        <h4 class="font-bold text-gray-800"><span class="text-primary mr-2">135.</span> The Kohinoor Nan / The Kohinoor Pan</h4>
+      </div>
+      <span class="font-bold text-primary">4,00€</span>
+    </div>
+
+  </div>
 </div>
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">32.</span> Pilau Rice / Arroz Pilau</h4>
-<p class="text-sm text-gray-600">
-Arroz basmati con azafrán y especias aromáticas
-<br>
-Basmati rice with saffron and aromatic spices
-</p>
+
+<!-- Indian Desserts -->
+<div id="desserts" class="menu-section mt-10">
+  <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Indian Dessert / Postre Indio</h3>
+  <div class="space-y-6">
+
+    <div class="flex justify-between items-start pb-2 border-b border-gray-200">
+      <span class="font-bold text-gray-800">Gulab-Jamun</span>
+      <span class="font-bold text-primary">4,25€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-2 border-b border-gray-200">
+      <span class="font-bold text-gray-800">Mango Kulfi</span>
+      <span class="font-bold text-primary">4,25€</span>
+    </div>
+
+    <div class="flex justify-between items-start pb-2 border-b border-gray-200">
+      <span class="font-bold text-gray-800">Pista Kulfi</span>
+      <span class="font-bold text-primary">4,25€</span>
+    </div>
+
+    <div class="flex justify-between items-start">
+      <span class="font-bold text-gray-800">Mango Lassi</span>
+      <span class="font-bold text-primary">4,25€</span>
+    </div>
+  </div>
 </div>
-<span class="font-bold text-primary">4,50€</span>
-</div>
-<div class="flex justify-between items-start">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">33.</span> Mushroom Rice / Arroz con Champiñones</h4>
-<p class="text-sm text-gray-600">
-Arroz basmati con champiñones y especias
-<br>
-Basmati rice with mushrooms and spices
-</p>
-</div>
-<span class="font-bold text-primary">4,95€</span>
-</div>
-</div>
-</div>
-<!-- Naan Bread -->
-<div id="bread" class="menu-section">
-<h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Naan Bread / Pan Naan</h3>
-<div class="space-y-6">
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">34.</span> Plain Naan / Naan Natural</h4>
-<p class="text-sm text-gray-600">
-Pan tradicional indio cocinado en horno tandoor
-<br>
-Traditional Indian bread cooked in tandoor oven
-</p>
-</div>
-<span class="font-bold text-primary">2,95€</span>
-</div>
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">35.</span> Garlic Naan / Naan de Ajo</h4>
-<p class="text-sm text-gray-600">
-Pan naan con ajo y cilantro
-<br>
-Naan bread with garlic and coriander
-</p>
-</div>
-<span class="font-bold text-primary">3,50€</span>
-</div>
-<div class="flex justify-between items-start pb-4 border-b border-gray-200">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">36.</span> Cheese Naan / Naan de Queso</h4>
-<p class="text-sm text-gray-600">
-Pan naan relleno de queso
-<br>
-Naan bread stuffed with cheese
-</p>
-</div>
-<span class="font-bold text-primary">3,95€</span>
-</div>
-<div class="flex justify-between items-start">
-<div>
-<h4 class="font-bold text-gray-800"><span class="text-primary mr-2">37.</span> Peshwari Naan / Naan Peshwari</h4>
-<p class="text-sm text-gray-600">
-Pan naan relleno de coco, almendras y pasas
-<br>
-Naan bread stuffed with coconut, almonds and raisins
-</p>
-</div>
-<span class="font-bold text-primary">4,50€</span>
-</div>
-</div>
-</div>
-</div>
+    </div>
 </div>
 </section>
 <!-- Gallery Section -->
