--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@ Discover the authentic flavors of India with our traditional recipes.
   <button class="menu-tab px-3 py-2 text-sm font-medium border-2 border-[#B8860B] rounded-lg hover:bg-[#B8860B]/10 transition-all whitespace-normal break-words" data-target="bread">
     Naan Bread
   </button>
+    <button class="menu-tab px-3 py-2 text-sm font-medium border-2 border-[#B8860B] rounded-lg hover:bg-[#B8860B]/10 transition-all whitespace-normal break-words" data-target="desserts">
+    Desserts
+  </button>
 </div>
 <!-- Menu Content -->
 <div class="menu-content bg-white rounded-lg shadow-md p-6">
@@ -1655,7 +1658,7 @@ Discover the authentic flavors of India with our traditional recipes.
   </div>
 </div>
 <!-- Nan Bread -->
-<div id="nan" class="menu-section">
+<div id="bread" class="menu-section">
   <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Nan Bread / Pan (Nan)</h3>
   <div class="space-y-6">
 
@@ -1765,7 +1768,7 @@ Discover the authentic flavors of India with our traditional recipes.
 </div>
 
 <!-- Indian Desserts -->
-<div id="desserts" class="menu-section mt-10">
+<div id="desserts" class="menu-section">
   <h3 class="text-2xl font-bold mb-6 text-gray-800 font-['Playfair_Display']">Indian Dessert / Postre Indio</h3>
   <div class="space-y-6">
 
